Fixed text-align on contact page

--- a/css/main.css
+++ b/css/main.css
@@ -471,6 +471,7 @@ br {
   align-items: center;
   justify-content: center;
   line-height: 4rem;
+  text-align: center;
 }
 
 .socials {
